--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
+}
+
+.home-page {
+	color: #282828;
+	height: 700px;
+	align-content: center;
+}
+
+.title-screen-text {
+	color: #bf2011;
+	font-family: "Roboto Slab", serif;
+	font-size: 70px;
+  font-weight: bold;
+	text-align: center;
+}
+
+.title-screen-subtext {
+	color: #d98f07;
+	font-family: "Roboto Slab", serif;
+	font-size: 25px;
+	text-align: center;
+}
+
+.title-screen-subtext2{
+  color: #085fc1;
+  font-family: 'Roboto';
+  font-weight: bold;
+  text-align: center;
+}
+
+.title-project-image{
+  height: 500px;
+}
+
+.header-brand {
+	color: #bf2011;
+	font-family: "Press Start 2P", cursive;
+	font-weight: bolder;
+	font-size: 35px;
+  text-decoration: none;
+}
+
+.header-text {
+	font-family: "Roboto Slab";
+	font-style: normal;
+  font-weight: bold;
+	color: #085fc1;
+  text-decoration: none;
+  margin-right: 5px;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
