Project Page dividers, red desaturation

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 }
 
 .title-screen-text {
-	color: #bf2011;
+	color: #c23728;
 	font-family: "Roboto Slab", serif;
 	font-size: 70px;
   font-weight: bold;
@@ -61,7 +61,7 @@
 }
 
 .header-brand {
-	color: #bf2011;
+	color: #c23728;
 	font-family: "Press Start 2P", cursive;
 	font-weight: bolder;
 	font-size: 35px;
